# ebook_capture

./: .env.example  .gitignore  FLOW.md  GUIDE.md  README.md  REFACTOR_PLAN.md  TRANSFER_CONTEXT.md  USAGE.md  __init__.py  __main__.py  activate.cmd  cli.py  default_config.json  default_config.jsonc  ebook_capture.py  pyproject.toml  requirements.txt  run_tests.cmd
.github/workflows/: tests.yml
assets/: __init__.py  capture.ui  ocr_default_prompt.txt  ocr_lang.csv  voice_lang.csv
core/: __init__.py  assemble_markdown.py  assemble_options.py  book_structure.py  config.py  google_ocr.py  image_pdf.py  job_plan.py  job_runner.py  markdown_render.py  ocr_json_loader.py  paragraph_merge.py  pdf_input.py  pipeline.py  screen_capture.py  searchable_pdf.py  section_normalize.py  text_reflow.py  tts.py  win32_bitmap_capture.py  windows_util.py
gui/: __init__.py  app.py  snipping.py  theme.py  ui_capture.py
tests/: __init__.py  conftest.py  test_assemble_config_style.py  test_assemble_markdown.py  test_assemble_options.py  test_book_structure_regression.py  test_cli.py  test_config.py  test_google_ocr_sanitize.py  test_job_plan.py  test_ocr_json_loader.py  test_pdf_input.py  test_screen_rect.py  test_section_normalize.py  test_text_reflow.py  test_windows_key.py
tests/fixtures/sample_book/tmp/: SampleBook_0008.ocr.json  SampleBook_0009.ocr.json  SampleBook_0010.ocr.json  SampleBook_0019.ocr.json  SampleBook_0020.ocr.json  SampleBook_0051.ocr.json  SampleBook_0272.ocr.json
