[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ebook-capture"
version = "0.2.0"
description = "Screen region capture for ebooks: image PDF, structured OCR text; CLI + PyQt5 GUI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "PyQt5>=5.15",
  "qt-material>=2.14,<2.15",
  "pandas>=1.5",
  "pyautogui>=0.9",
  "mss>=9.0.1",
  "pygetwindow>=0.0.9",
  "Pillow>=9.0",
  "google-genai>=1.0",
  "python-dotenv>=1.0",
  "certifi>=2024.0",
  "truststore>=0.10",
  "PyPDF2>=3.0",
  "reportlab>=4.0",
]

[project.scripts]
ebook-capture = "ebook_capture:main"

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra --strict-markers"
markers = [
  "integration: end-to-end tests that exercise CLI handlers",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "gui*", "assets*"]

[tool.setuptools]
py-modules = ["cli", "ebook_capture"]

[tool.setuptools.package-data]
assets = ["*"]
